# ESP

ESP32S3_EYE_Template/: CMakeLists.txt  README.md
ESP32S3_Template/: CMakeLists.txt
ESP32_NVS/: CMakeLists.txt  sdkconfig
ESP32_NVS/main/: main.cpp
ESP32_PartitionTable/: CMakeLists.txt  sdkconfig
ESP32_PartitionTable/main/: main.cpp
Esp32_S3_BlinkLed/: CMakeLists.txt  sdkconfig
EventGroup/: CMakeLists.txt  sdkconfig.old
EventGroup/main/: main.c
EventLoop/: CMakeLists.txt
EventLoop/main/: main.c
HwInfoPrint/: CMakeLists.txt
HwInfoPrint/main/: CMakeLists.txt  main.cpp
LogTest/: CMakeLists.txt  sdkconfig  sdkconfig.old
LogTest/main/: Kconfig.projbuild  main.c
TestVS/: CMakeLists.txt  sdkconfig.old
WetherLcd/: WhetherLCD.sll  WhetherLCD.spj
WetherLcd/SourceCode/SmartEye/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
WetherLcd/SourceCode/SmartEye/components/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
WetherLcd/SourceCode/SmartEye/components/ui/fonts/: ui_font_Jianti32.c
WetherLcd/SourceCode/SmartEye/components/ui/images/: ui_img_1002720352.c  ui_img_1006248924.c  ui_img_157055255.c  ui_img_1596713459.c  ui_img_1720731786.c  ui_img_1720799304.c  ui_img_1720837355.c  ui_img_1720875278.c  ui_img_1720905129.c  ui_img_1720942796.c  ui_img_1720980847.c  ui_img_1721018770.c  ui_img_1721048621.c  ui_img_1721124339.c  ui_img_1768248264.c  ui_img_1793650149.c  ui_img_1793717667.c  ui_img_1793755718.c  ui_img_1793793641.c  ui_img_1793823492.c  ui_img_1793861159.c  ui_img_1793899210.c  ui_img_1793937133.c  ui_img_1793966984.c  ui_img_1794042702.c  ui_img_1936254497.c  ui_img_49419290.c  ui_img_604944085.c  ui_img_710175435.c  ui_img_712580050.c  ui_img_72714779.c  ui_img_775356061.c  ui_img_775385912.c  ui_img_775423835.c  ui_img_775461886.c  ui_img_775499553.c  ui_img_775529404.c  ui_img_775567327.c  ui_img_775605378.c  ui_img_775672896.c  (+1 more)
WetherLcd/SourceCode/SmartEye/components/ui/screens/: ui_Screen1.c
WetherLcd/SourceCode/SmartEye/main/: idf_component.yml  main.c
WetherLcd/SourceCode/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_helpers.h
WetherLcd/SourceCode/UI/fonts/: ui_font_Jianti16.c
WetherLcd/SourceCode/UI/images/: ui_img_bg3_png.c  (+1 more)
WetherLcd/assets/Fonts/: ui_font_Jianti16.fcfg  ui_font_Jianti24.c  ui_font_Jianti24.fcfg  ui_font_Jianti32.fcfg  ui_font_Jianti48.c  ui_font_Jianti48.fcfg
WifiConfig/: CMakeLists.txt  sdkconfig  sdkconfig.old
WifiConfig/main/: main.cpp
esp32_s3_eye/: CMakeLists.txt  sdkconfig
esp32_s3_eye/main/include/: app_button.hpp
esp_s3_who/: CMakeLists.txt  sdkconfig
esp_s3_who/main/: app_main.cpp
esp_s3_who/main/include/: __base__.hpp  app_button.hpp  app_camera.hpp  app_custlogo.hpp  app_face.hpp  app_lcd.hpp  app_led.hpp  app_motion.hpp
esp_s3_who/main/src/: app_button.cpp  app_camera.cpp  app_face.cpp  app_lcd.cpp  app_led.cpp  app_motion.cpp  app_speech.cpp
eye_test/: CMakeLists.txt  sdkconfig
eye_test/components/FctTest/: CMakeLists.txt  FctTest.c
eye_test/components/ui/: CMakeLists.txt  ui.c  ui_Screen1.c  ui_font_Jianti16.c  ui_font_Jianti24.c  ui_font_Jianti32.c  ui_font_Jianti48.c  ui_helpers.c  ui_img_1022817823.c  ui_img_1165484050.c  ui_img_1532110541.c  ui_img_1733488461.c  ui_img_2018655616.c  ui_img_261581757.c  ui_img_273823832.c  ui_img_583279387.c  ui_img_58911356.c  ui_img_807905347.c  ui_img_820147422.c  ui_img_83754871.c  ui_img_997974308.c  ui_img_bg3_png.c  ui_img_whether_sun_png.c
eye_test/components/ui/include/: ui.h  ui_events.h
eye_test/main/: CMakeLists.txt  main.c
(+18 files in other folders)
