idf_component_register(SRCS 
    "ui.c"
    "ui_helpers.c"
    "fonts/ui_font_Jianti16.c"
    "fonts/ui_font_Jianti24.c"
    "fonts/ui_font_Jianti32.c"
    "fonts/ui_font_Jianti48.c"
    "images/ui_img_49419290.c"
    "images/ui_img_72714779.c"
    "images/ui_img_157055255.c"
    "images/ui_img_604944085.c"
    "images/ui_img_710175435.c"
    "images/ui_img_712580050.c"
    "images/ui_img_775356061.c"
    "images/ui_img_775385912.c"
    "images/ui_img_775423835.c"
    "images/ui_img_775461886.c"
    "images/ui_img_775499553.c"
    "images/ui_img_775529404.c"
    "images/ui_img_775567327.c"
    "images/ui_img_775605378.c"
    "images/ui_img_775672896.c"
    "images/ui_img_1002720352.c"
    "images/ui_img_1006248924.c"
    "images/ui_img_1596713459.c"
    "images/ui_img_1720731786.c"
    "images/ui_img_1720799304.c"
    "images/ui_img_1720837355.c"
    "images/ui_img_1720875278.c"
    "images/ui_img_1720905129.c"
    "images/ui_img_1720942796.c"
    "images/ui_img_1720980847.c"
    "images/ui_img_1721018770.c"
    "images/ui_img_1721048621.c"
    "images/ui_img_1721124339.c"
    "images/ui_img_1768248264.c"
    "images/ui_img_1793650149.c"
    "images/ui_img_1793717667.c"
    "images/ui_img_1793755718.c"
    "images/ui_img_1793793641.c"
    "images/ui_img_1793823492.c"
    "images/ui_img_1793861159.c"
    "images/ui_img_1793899210.c"
    "images/ui_img_1793937133.c"
    "images/ui_img_1793966984.c"
    "images/ui_img_1794042702.c"
    "images/ui_img_1936254497.c"
    "images/ui_img_1936254497.c"
    "images/ui_img_bg0_png.c"
    "images/ui_img_bg3_png.c"
    "screens/ui_Screen1.c"
    INCLUDE_DIRS "."
    REQUIRES lvgl)


